Created figures for results of node removal

--- a/documents/urban_simulation_report.bib
+++ b/documents/urban_simulation_report.bib
@@ -9,6 +9,24 @@
   file = {C:\Users\Soki\Zotero\storage\6KVFXJAN\graph-theory-measures-indices.html}
 }
 
+@article{bellingeri2020,
+  title = {Link and {{Node Removal}} in {{Real Social Networks}}: {{A Review}}},
+  shorttitle = {Link and {{Node Removal}} in {{Real Social Networks}}},
+  author = {Bellingeri, Michele and Bevacqua, Daniele and Scotognella, Francesco and Alfieri, Roberto and Nguyen, Quang and Montepietra, Daniele and Cassi, Davide},
+  year = {2020},
+  month = jul,
+  journal = {Frontiers in Physics},
+  volume = {8},
+  publisher = {Frontiers},
+  issn = {2296-424X},
+  doi = {10.3389/fphy.2020.00228},
+  urldate = {2024-03-29},
+  abstract = {In this mini-review we discuss the problem of links/nodes removal in real social networks. We resume findings from works that adopted the two most common measure of network robustness, i.e. the largest connected component (LCC) and the network efficiency (Eff). We consider both binary-topological and weighted network approaches by elucidating how links/nodes removal affect the spreading of information in real social networks. We show that to investigate the response of social network subjected to links/nodes removal can be useful to manage many important practical problems. This mini-review outlines that to perform more real and precise prediction of social networks response to links/nodes removal it is necessary to account the heterogeneity in link weights. Eventually, we propose promising lines for future researches in social network science.},
+  langid = {english},
+  keywords = {Information spreading,link (node) failure,Network attack,Network Robustness and Resiliency,Social network},
+  file = {C:\Users\Soki\Zotero\storage\IPP8DXDM\Bellingeri et al. - 2020 - Link and Node Removal in Real Social Networks A R.pdf}
+}
+
 @article{cerqueti2019,
   title = {Measuring Network Resilience through Connection Patterns},
   author = {Cerqueti, Roy and Ferraro, Giovanna and Iovanella, Antonio},
@@ -54,6 +72,22 @@
   urldate = {2024-03-27},
   abstract = {Leaf venation is a pervasive example of a complex biological network, endowing leaves with a transport system and mechanical resilience. Transport networks optimized for efficiency have been shown to be trees, i.e., loopless. However, dicotyledon leaf venation has a large number of closed loops, which are functional and able to transport fluid in the event of damage to any vein, including the primary veins. Inspired by leaf venation, we study two possible reasons for the existence of a high density of loops in transport networks: resilience to damage and fluctuations in load. In the first case, we seek the optimal transport network in the presence of random damage by averaging over damage to each link. In the second case, we seek the network that optimizes transport when the load is sparsely distributed: at any given time most sinks are closed. We find that both criteria lead to the presence of loops in the optimum state.},
   file = {C\:\\Users\\Soki\\Zotero\\storage\\JGGEGJAU\\Katifori et al. - 2010 - Damage and Fluctuations Induce Loops in Optimal Tr.pdf;C\:\\Users\\Soki\\Zotero\\storage\\R4BTWHZT\\PhysRevLett.104.html}
+}
+
+@article{latora2001,
+  title = {Efficient {{Behavior}} of {{Small-World Networks}}},
+  author = {Latora, Vito and Marchiori, Massimo},
+  year = {2001},
+  month = oct,
+  journal = {Physical Review Letters},
+  volume = {87},
+  number = {19},
+  pages = {198701},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.87.198701},
+  urldate = {2024-03-29},
+  abstract = {We introduce the concept of efficiency of a network as a measure of how efficiently it exchanges information. By using this simple measure, small-world networks are seen as systems that are both globally and locally efficient. This gives a clear physical meaning to the concept of ``small world,'' and also a precise quantitative analysis of both weighted and unweighted networks. We study neural networks and man-made communication and transportation systems and we show that the underlying general principle of their construction is in fact a small-world principle of high efficiency.},
+  file = {C\:\\Users\\Soki\\Zotero\\storage\\VCUCX6P8\\Latora and Marchiori - 2001 - Efficient Behavior of Small-World Networks.pdf;C\:\\Users\\Soki\\Zotero\\storage\\U2CA2SAV\\PhysRevLett.87.html}
 }
 
 @article{latora2007,
