--- a/documents/urban_simulation_report.bib
+++ b/documents/urban_simulation_report.bib
@@ -9,6 +9,22 @@
   file = {C:\Users\Soki\Zotero\storage\6KVFXJAN\graph-theory-measures-indices.html}
 }
 
+@article{bellingeri2018,
+  title = {Robustness of Weighted Networks},
+  author = {Bellingeri, Michele and Cassi, Davide},
+  year = {2018},
+  month = jan,
+  journal = {Physica A: Statistical Mechanics and its Applications},
+  volume = {489},
+  pages = {47--55},
+  issn = {0378-4371},
+  doi = {10.1016/j.physa.2017.07.020},
+  urldate = {2024-03-31},
+  abstract = {Complex network response to node loss is a central question in different fields of network science because node failure can cause the fragmentation of the network, thus compromising the system functioning. Previous studies considered binary networks where the intensity (weight) of the links is not accounted for, i.e. a link is either present or absent. However, in real-world networks the weights of connections, and thus their importance for network functioning, can be widely different. Here, we analyzed the response of real-world and model networks to node loss accounting for link intensity and the weighted structure of the network. We used both classic binary node properties and network functioning measure, introduced a weighted rank for node importance (node strength), and used a measure for network functioning that accounts for the weight of the links (weighted efficiency). We find that: (i) the efficiency of the attack strategies changed using binary or weighted network functioning measures, both for real-world or model networks; (ii) in some cases, removing nodes according to weighted rank produced the highest damage when functioning was measured by the weighted efficiency; (iii) adopting weighted measure for the network damage changed the efficacy of the attack strategy with respect the binary analyses. Our results show that if the weighted structure of complex networks is not taken into account, this may produce misleading models to forecast the system response to node failure, i.e. consider binary links may not unveil the real damage induced in the system. Last, once weighted measures are introduced, in order to discover the best attack strategy, it is important to analyze the network response to node loss using nodes rank accounting the intensity of the links to the node.},
+  keywords = {Links weight,Network attack strategies,Network robustness,Weighted networks,Weighted nodes rank},
+  file = {C:\Users\Soki\Zotero\storage\TPT56ZIM\S0378437117307082.html}
+}
+
 @article{bellingeri2020,
   title = {Link and {{Node Removal}} in {{Real Social Networks}}: {{A Review}}},
   shorttitle = {Link and {{Node Removal}} in {{Real Social Networks}}},
@@ -56,6 +72,23 @@
   urldate = {2024-01-19},
   langid = {english},
   file = {C\:\\Users\\Soki\\Zotero\\storage\\RPJ7VSLW\\Flowerdew and Aitkin - 1982 - A Method of Fitting the Gravity Model Based on the.pdf;C\:\\Users\\Soki\\Zotero\\storage\\WXNR4IHU\\j.1467-9787.1982.tb00744.html}
+}
+
+@article{horl2016,
+  title = {{{METRO}}.{{FREIGHT}}.2020 -- {{Strategies}} for {{Strengthening Rail Infrastructure}} for {{Freight Transport}} in {{Urban Regions}}},
+  author = {H{\"o}rl, Bardo and D{\"o}rr, Heinz and Wanjek, Monika and Romstorfer, Andreas},
+  year = {2016},
+  month = jan,
+  journal = {Transportation Research Procedia},
+  series = {Transport {{Research Arena TRA2016}}},
+  volume = {14},
+  pages = {2776--2784},
+  issn = {2352-1465},
+  doi = {10.1016/j.trpro.2016.05.478},
+  urldate = {2024-03-31},
+  abstract = {In most European congested urban areas the rail tracks of the 19th and 20th century serving locations of industry and goods stations were removed, transformed for public passenger transport, closed down or used for other purposes. The main reasons might be the de-industrialisation of the inner cities and the centralisation of the supply-sector (wholesale markets, shopping centres). Simultaneous the urban areas got an excellent road network on the surface and an efficient public transport system in the underground or on dedicated tracks. Nevertheless the amount of goods delivered to urban areas increased due to material prosperity. In this context ``METRO.FREIGHT.2020'' analysed the possibilities of a reinforced utilisation of railway infrastructure for freight transport on the first and the last miles within the urban regions in Austria as exemplified in case studies for the metropolitan Region of Vienna, the agglomerations of Graz and Linz and for the urbanised Rhine-Valley in Vorarlberg. In this context the focus point of consideration was the interface of transport and urban development, to a lesser extent the theoretical approach behind. As a fundamental milestone a cadastre of existing or recoverable sidings or other rail shipping points has been surveyed. They were evaluated in respect of serviceability concerning tracking freight trains in the rail network and extensibility in the service area which was complemented with propositions for further developing. The recommendations focus measures intending technically and economically operable access points to rail net on one hand and potentially appropriate access points for the future. But, to reach this goal more strengthened integration of commercial location policy and of shippers' transport demands with a coordinated land use planning and an infrastructure development policy is required. Finally the methodical approach elaborated comprises following components to push more rail freight shipping:{$\bullet$}Traffic zoning is a hierarchical spatial approach subdividing an urban region in sectors, zones and `agglomerates' as spheres of activity for political and private actors involved in freight traffic generation and infrastructure affaires.{$\bullet$}Surveying a multimodal topology of infrastructure network which integrates all transport modes in its layout of freight infrastructure propped up on a public platform of a multimodal network graph in future.{$\bullet$}Characterizing an `agglomerate' typology of shipping sites with affinity to rail which describes the typical initial position and development trends of the freight transport inducing traffic zones.{$\bullet$}Shaping spatial structures which consist of super structures of shipping industrial sites as traffic generators, the infrastructure with its capacity for freight movements and the `metastructure' as external affected settlements and land uses are prime targets and intervention objects, the coordinated measures have to be allocated to. The railway operators are called on to offer more flexible train and operation forms tailored to the logistics of shippers if the rail infrastructure within the serving area from the consolidation node to the sidings enables it. In the end three scenarios have been identified, namely a scenario of ultimate displacement of rail freight service in towns, a retarding scenario which brakes the retreat of rail connected with a change of paradigm in transport and traffic planning leading into an offensive scenario of `clean freight mobility' to revitalize and extend rail freight operations into areas of high consumption.},
+  keywords = {agglomeration,city logistic,rail freight,rail infrastructure,Urban logistics},
+  file = {C:\Users\Soki\Zotero\storage\V59D26FD\S2352146516304859.html}
 }
 
 @article{katifori2010,
@@ -107,6 +140,53 @@
   file = {C:\Users\Soki\Zotero\storage\4CEYIT5V\Latora and Marchiori - 2007 - A measure of centrality based on network efficienc.pdf}
 }
 
+@article{lee2008,
+  title = {Statistical Analysis of the {{Metropolitan Seoul Subway System}}: {{Network}} Structure and Passenger Flows},
+  shorttitle = {Statistical Analysis of the {{Metropolitan Seoul Subway System}}},
+  author = {Lee, Keumsook and Jung, Woo-Sung and Park, Jong Soo and Choi, M. Y.},
+  year = {2008},
+  month = oct,
+  journal = {Physica A: Statistical Mechanics and its Applications},
+  volume = {387},
+  number = {24},
+  pages = {6231--6234},
+  issn = {0378-4371},
+  doi = {10.1016/j.physa.2008.06.035},
+  urldate = {2024-03-31},
+  abstract = {The Metropolitan Seoul Subway system, consisting of 380 stations, provides the major transportation mode in the metropolitan Seoul area. Focusing on the network structure, we analyze statistical properties and topological consequences of the subway system. We further study the passenger flows on the system, and find that the flow weight distribution exhibits a power-law behavior. In addition, the degree distribution of the spanning tree of the flows also follows a power law.},
+  keywords = {Passenger flow,Power law,Subway,Transportation},
+  file = {C\:\\Users\\Soki\\Zotero\\storage\\EPTWXX5W\\Lee et al. - 2008 - Statistical analysis of the Metropolitan Seoul Sub.pdf;C\:\\Users\\Soki\\Zotero\\storage\\UJFH8ND4\\S0378437108006006.html}
+}
+
+@inproceedings{nistor2015,
+  title = {Quantitative {{Network Analysis}} of {{Metro Transportation Systems}}: {{Introducing}} the {{Flow-Weighted Efficiency Measure}}},
+  shorttitle = {Quantitative {{Network Analysis}} of {{Metro Transportation Systems}}},
+  author = {Nistor, Marian Sorin and Pickl, Stefan and Raap, Manon and Zsifkovits, Martin},
+  year = {2015},
+  month = dec,
+  abstract = {Providers of public transportation systems such as underground networks are facing the strong need of permanent serviceability. Profound knowledge on the network structure is fundamental in order to detect stations that are most critical for the functioning of the system. This paper addresses the usability of the weight values of a graph from an efficiency point of view. The proposed measure calculates the flow-weighted efficiency in a subway network by compiling the shortest route between every pair of stations and the according bottleneck flow of the trains. Results show that the network efficiency is invariant over all schedules, whereas the flow-weighted efficiency is significantly variating; it is highest on the densest schedule and lowest when the least trains are operating. By means of the analysis it is possible to optimize the quality management of such systems in terms of maximizing serviceability via various security installations and back-up solutions.},
+  file = {C:\Users\Soki\Zotero\storage\7UCGN6UJ\Nistor et al. - 2015 - Quantitative Network Analysis of Metro Transportat.pdf}
+}
+
+@article{nistor2019,
+  title = {Network Efficiency and Vulnerability Analysis Using the Flow-Weighted Efficiency Measure},
+  author = {Nistor, Marian Sorin and Pickl, Stefan and Raap, Manon and Zsifkovits, Martin},
+  year = {2019},
+  month = mar,
+  journal = {International Transactions in Operational Research},
+  volume = {26},
+  number = {2},
+  pages = {577--588},
+  issn = {1475-3995},
+  doi = {10.1111/itor.12384},
+  urldate = {2024-03-31},
+  abstract = {Analyzing the vulnerability of a network and identifying its critical spots is of great importance for today's decision makers. The in-depth knowledge about the underlying network and its efficiency is fundamental to adequate decision making. In this paper, the flow-weighted efficiency measure is introduced and exemplarily demonstrated on a physical network---the underground network of Munich, Germany. This paper addresses the usability of the weight values of a graph from an efficiency point of view. The proposed measure calculates the flow-weighted efficiency in a subway network by computing the shortest route between every pair of stations and the according bottleneck flow of the trains. Results show that the network efficiency is invariant over all schedules, whereas the flow-weighted efficiency is significantly varying according to the train schedules.},
+  copyright = {{\copyright} 2017 The Authors. International Transactions in Operational Research {\copyright} 2017 International Federation of Operational Research Societies},
+  langid = {english},
+  keywords = {flow-weighted efficiency loss,flow-weighted efficiency measures,Munich underground network,network serviceability,quantitative graph theory},
+  file = {C\:\\Users\\Soki\\Zotero\\storage\\ANTI5377\\Nistor et al. - 2019 - Network efficiency and vulnerability analysis usin.pdf;C\:\\Users\\Soki\\Zotero\\storage\\SKVWCN45\\itor.html}
+}
+
 @article{paaswell2012,
   title = {Approaches to {{Infrastructure Redevelopment}}, {{WTC}}, {{Lower NYC}} and the {{Region}}},
   author = {Paaswell, Robert E.},
@@ -129,6 +209,14 @@
   doi = {10.1109/PIMRC.2013.6666731},
   abstract = {In this paper we consider the extension of the betweenness centrality measure which is used in social and computer communication networks to estimate the potential monitoring and control capabilities a node may have on data flowing in the network. Unlike the standard betweenness centrality measure which takes into account only the shortest paths between the nodes of given network, our, so-called {$\Delta$}-betweenness centrality measure is based on short paths between the nodes. We present an efficient algorithm for computing this measure and show experimental results supporting the importance of newly defined measure.},
   file = {C:\Users\Soki\Zotero\storage\NQPMQRA9\Plutov and Segal - 2013 - The delta-betweenness centrality.pdf}
+}
+
+@misc{transportforlondon2021,
+  title = {Project {{NUMBAT}}},
+  author = {{Transport for London}},
+  year = {2021},
+  urldate = {2024-03-31},
+  file = {C:\Users\Soki\Zotero\storage\WDP9Q8TR\crowding.data.tfl.gov.uk.html}
 }
 
 @misc{transportforlondon2023b,
